Fix divider spacing.

--- a/src/sql/workbench/parts/notebook/browser/notebook.css
+++ b/src/sql/workbench/parts/notebook/browser/notebook.css
@@ -151,7 +151,9 @@
 
 .notebookEditor .hoverButtonsContainer .containerBackground {
 	position: absolute;
-	width: inherit;
+	width: auto;
+	left: 20px;
+	right: 20px;
 	height: 1px;
 	z-index: 0;
 	visibility: hidden;
